--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -163,7 +163,7 @@ format-muted-background = ${color.blue}
 format-muted-foreground = ${color.red}
 format-muted-padding = 1
 
-label-muted = ""
+label-muted = 
 label-muted-foreground = ${color.fg}
 
 ramp-volume-0 = 
