--- a/.config/polybar/user_modules.ini
+++ b/.config/polybar/user_modules.ini
@@ -43,12 +43,12 @@ click-right = networkmanager_dmenu &
 [module/updates]
 type = custom/script
 exec = ~/.config/polybar/scripts/updates.sh
-interval = 600
+tail = true
+interval = 5
 
 ;exec = ~/.config/polybar/scripts/check-all-updates.sh
 
-;tail = true
-;interval = 5
+
 
 format-background = ${color.mf}
 format-foreground = ${color.fg}
