fixed symlinks in setup.sh + added fish config

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -160,7 +160,7 @@ font-0 = "FiraCode Nerd Font:size=11;3"
 
 modules-left = workspaces title
 modules-center = spotify
-modules-right = alsa_i alsa separator cpu_i cpu_temp separator updates_i updates separator date_i date separator powermenu_i powermenu
+modules-right = alsa_i alsa separator updates_i updates separator date_i date separator powermenu_i powermenu
 ;modules-right = style_i style separator alsa_i alsa separator battery_i battery separator network_i network separator date_i date
 
 ; The separator will be inserted between the output of each module
@@ -322,7 +322,6 @@ format-offset =
 ; Enables pseudo-transparency for the bar
 ; If set to true the bar can be transparent without a compositor.
 pseudo-transparency = false
-
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;	    __________  ______
 ;;	   / ____/ __ \/ ____/
