--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -166,11 +166,11 @@ format-muted-padding = 1
 label-muted = 
 label-muted-foreground = ${color.fg}
 
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
-ramp-volume-3 = 
-ramp-volume-4 = 
+ramp-volume-0 = " "
+ramp-volume-1 = " "
+ramp-volume-2 = " "
+ramp-volume-3 = " "
+ramp-volume-4 = " "
 ramp-headphones-0 = 
 ramp-headphones-1 = 
 
@@ -452,8 +452,8 @@ type = internal/date
 
 interval = 1.0
 
-time = 
-time-alt = 
+time = " "
+time-alt = " "
 
 format = <label>
 format-background = ${color.amber}
@@ -623,7 +623,7 @@ icon-pause = 
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-[module/network]
+[module/wirelessnetwork]
 type = internal/network
 
 interface = wlp3s0
@@ -645,7 +645,7 @@ format-disconnected-padding = 1
 label-connected = "%essid%"
 label-disconnected = "Disconnected"
 
-[module/network_i]
+[module/wirelessnetwork_i]
 type = internal/network
 interface = wlp3s0
 
@@ -800,7 +800,113 @@ format = <label>
 format-foreground = ${color.fg-alt}
 
 label =  %title%
-label-maxlen = 20
+label-maxlen = 30
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+; Normal Module
+[module/network]
+type = internal/network
+interface = enp34s0
+
+; Seconds to sleep between updates
+; Default: 1
+interval = 1.0
+
+; Test connectivity every Nth update
+; A value of 0 disables the feature
+; NOTE: Experimental (needs more testing)
+; Default: 0
+;ping-interval = 3
+
+; @deprecated: Define min width using token specifiers (%downspeed:min% and %upspeed:min%)
+; Minimum output width of upload/download rate
+; Default: 3
+;;udspeed-minwidth = 5
+
+; Accumulate values from all interfaces
+; when querying for up/downspeed rate
+; Default: false
+accumulate-stats = true
+
+; Consider an `UNKNOWN` interface state as up.
+; Some devices have an unknown state, even when they're running
+; Default: false
+unknown-as-up = true
+
+; Available tags:
+;   <label-connected> (default)
+;   <ramp-signal>
+;format-connected = <ramp-signal> <label-connected>
+
+format-connected = <label-connected>
+format-connected-background = ${color.mf}
+format-connected-foreground = ${color.fg}
+format-connected-padding = 1
+
+; Available tags:
+;   <label-connected> (default)
+;   <label-packetloss>
+;   <animation-packetloss>
+;;format-packetloss = <animation-packetloss> <label-connected>
+
+; Available tokens:
+;   %ifname%    [wireless+wired]
+;   %local_ip%  [wireless+wired]
+;   %local_ip6% [wireless+wired]
+;   %essid%     [wireless]
+;   %signal%    [wireless]
+;   %upspeed%   [wireless+wired]
+;   %downspeed% [wireless+wired]
+;   %linkspeed% [wired]
+; Default: %ifname% %local_ip%
+label-connected = "%local_ip%  %downspeed%"
+;;label-connected-foreground = #eefafafa
+
+; Available tokens:
+;   %ifname%    [wireless+wired]
+; Default: (none)
+label-disconnected = Disconnected
+;;label-disconnected-foreground = #66ffffff
+
+; Available tokens:
+;   %ifname%    [wireless+wired]
+;   %local_ip%  [wireless+wired]
+;   %local_ip6% [wireless+wired]
+;   %essid%     [wireless]
+;   %signal%    [wireless]
+;   %upspeed%   [wireless+wired]
+;   %downspeed% [wireless+wired]
+;   %linkspeed% [wired]
+; Default: (none)
+;label-packetloss = %essid%
+;label-packetloss-foreground = #eefafafa
+
+[module/network_i]
+type = internal/network
+interface = enp34s0
+
+interval = 1.0
+accumulate-stats = true
+unknown-as-up = true
+
+format-connected = <ramp-signal> 
+format-connected-background = ${color.purple}
+format-connected-foreground = ${color.fg}
+format-connected-padding = 1
+
+format-disconnected = <label-disconnected>
+format-disconnected-background = ${color.purple}
+format-disconnected-foreground = ${color.fg}
+format-disconnected-padding = 1
+
+label-disconnected = ""
+
+ramp-signal-0 = ""
+ramp-signal-1 = ""
+ramp-signal-2 = ""
+ramp-signal-3 = ""
+ramp-signal-4 = ""
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;	    __________  ______
