--- a/.config/polybar/user_modules.ini
+++ b/.config/polybar/user_modules.ini
@@ -54,17 +54,17 @@ format-background = ${color.mf}
 format-foreground = ${color.fg}
 format-padding = 1
 
-click-left = ~/.config/polybar/scripts/lupdates &
+click-left = ~/.config/polybar/scripts/update-command &
 
 [module/updates_i]
 type = custom/text
 
-content = 
+content = " "
 content-background = ${color.yellow}
 content-foreground = ${color.fg}
 content-padding = 1
 
-click-left = ~/.config/polybar/scripts/lupdates &
+click-left = ~/.config/polybar/scripts/update-command &
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
