--- a/.config/i3/config
+++ b/.config/i3/config
@@ -9,16 +9,11 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
-
-exec_always --no-startup-id autotiling
-exec_always --no-startup-id ~/.config/polybar/launch.sh
-exec_always --no-startup-id ~/.config/dunst/launch.sh
-
 # #---Basic Definitions---# #
 smart_gaps on
 smart_borders on
-set $inner_gaps 15
-set $outer_gaps 12
+set $inner_gaps 10
+set $outer_gaps 0
 
 # #---Gaps---# #
 for_window [class="^.*"] border pixel 2
@@ -37,6 +32,15 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
+
+# Use autotiling
+exec_always --no-startup-id autotiling
+
+# Use polybar as main navigation 
+exec_always --no-startup-id ~/.config/polybar/launch.sh
+
+# Dunst notification daemon
+exec_always --no-startup-id ~/.config/dunst/launch.sh
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -143,7 +147,6 @@ assign [class="Termite"] $ws1
 ## Browser
 assign [class="Google-chrome"] $ws2
 
-
 ## Editor
 assign [class="VSCodium"] $ws3
 assign [class="Atom"] $ws3
@@ -215,6 +218,10 @@ bindsym XF86AudioPause exec playerctl play-pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
-# Startup Programs
+# Bind $mod+P to file manager
+bindsym $mod+P exec --no-startup-id nautilus
+
+### Startup Programs ###
 exec google-chrome
 exec spotify
+exec whatsapp-for-linux
