started fixing bar icons

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -268,11 +268,11 @@ label-full-background = ${color.green}
 label-full-foreground = ${color.fg}
 label-full-padding = 1
 
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
+ramp-capacity-0 = " "
+ramp-capacity-1 = " "
+ramp-capacity-2 = " "
+ramp-capacity-3 = " "
+ramp-capacity-4 = " "
 
 animation-charging-0 = 
 animation-charging-1 = 
@@ -907,6 +907,56 @@ ramp-signal-1 = ""
 ramp-signal-2 = ""
 ramp-signal-3 = ""
 ramp-signal-4 = ""
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/wifi]
+type = internal/network
+
+interface = wlp1s0
+interval = 1.0
+
+accumulate-stats = true
+unknown-as-up = true
+
+format-connected = <label-connected>
+format-connected-background = ${color.mf}
+format-connected-foreground = ${color.fg}
+format-connected-padding = 1
+
+format-disconnected = <label-disconnected>
+format-disconnected-background = ${color.mf}
+format-disconnected-foreground = ${color.fg}
+format-disconnected-padding = 1
+
+label-connected = "%{A1:$HOME/.config/polybar/scripts/nmcli-rofi:}%essid%%{A}"
+label-disconnected = "%{A1:$HOME/.config/polybar/scripts/nmcli-rofi:}Disconnected%{A}"
+
+[module/wifi_i]
+type = internal/network
+interface = wlp1s0
+
+interval = 1.0
+accumulate-stats = true
+unknown-as-up = true
+
+format-connected = <ramp-signal>
+format-connected-background = ${color.purple}
+format-connected-foreground = ${color.fg}
+format-connected-padding = 1
+
+format-disconnected = <label-disconnected>
+format-disconnected-background = ${color.purple}
+format-disconnected-foreground = ${color.fg}
+format-disconnected-padding = 1
+
+label-disconnected = "睊 "
+
+ramp-signal-0 = "直 "
+ramp-signal-1 = "直 "
+ramp-signal-2 = "直 "
+ramp-signal-3 = "直 "
+ramp-signal-4 = "直 "
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;	    __________  ______
