--- a/.config/polybar/user_modules.ini
+++ b/.config/polybar/user_modules.ini
@@ -46,13 +46,12 @@ exec = ~/.config/polybar/scripts/updates.sh
 tail = true
 interval = 5
 
-;exec = ~/.config/polybar/scripts/check-all-updates.sh
 
 
 
-format-background = ${color.mf}
-format-foreground = ${color.fg}
-format-padding = 1
+;format-background = ${color.mf}
+;format-foreground = ${color.fg}
+;format-padding = 1
 
 click-left = ~/.config/polybar/scripts/update-command &
 
