--- a/.config/polybar/user_modules.ini
+++ b/.config/polybar/user_modules.ini
@@ -46,11 +46,8 @@ exec = ~/.config/polybar/scripts/updates.sh
 tail = true
 interval = 5
 
-
-
-
-;format-background = ${color.mf}
-;format-foreground = ${color.fg}
+content-background = ${color.mf}
+format-foreground = ${color.fg-alt}
 ;format-padding = 1
 
 click-left = ~/.config/polybar/scripts/update-command &
@@ -76,56 +73,6 @@ format-background = ${color.mf}
 format-foreground = ${color.fg}
 format-padding = 1
 
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/window_switch]
-type = custom/text
-
-content = Switch
-content-background = ${color.mf}
-content-foreground = ${color.fg}
-content-padding = 1
-
-click-left = skippy-xd
-click-middle = skippy-xd
-click-right = ~/.config/polybar/scripts/windows
-
-[module/window_switch_i]
-type = custom/text
-
-content = 
-content-background = ${color.pink}
-content-foreground = ${color.fg}
-content-padding = 1
-
-click-left = skippy-xd
-click-middle = skippy-xd
-click-right = ~/.config/polybar/scripts/windows
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/launcher]
-type = custom/text
-
-content = Menu
-content-background = ${color.mf}
-content-foreground = ${color.fg}
-content-padding = 1
-
-click-left = ~/.config/polybar/scripts/launcher
-click-right = ~/.config/polybar/scripts/launcher-alt
-
-[module/launcher_i]
-type = custom/text
-
-content = 
-content-background = ${color.red}
-content-foreground = ${color.fg}
-content-padding = 1
-
-click-left = ~/.config/polybar/scripts/launcher
-click-right = ~/.config/polybar/scripts/launcher-alt
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -210,65 +157,30 @@ content-padding = 1
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-[module/menu]
+[module/testmenu]
 type = custom/menu
-
 expand-right = true
 
-menu-0-0 = Apps
-menu-0-0-exec = ~/.config/polybar/scripts/launcher &
-menu-0-1 = Files
-menu-0-1-exec = thunar &
-menu-0-2 = Terminal
-menu-0-2-exec = termite &
-menu-0-3 = Browser
-menu-0-3-exec = firefox &
+menu-0-0 = reboot
+menu-0-0-exec = systemctl reboot
+menu-0-1 = shutdown
+menu-0-1-exec = systemctl poweroff
+menu-1-0 = reboot
+menu-1-0-exec = systemctl reboot
+menu-2-0 = shutdown
+menu-2-0-exec = systemctl poweroff
 
-format-spacing = 1
-format-background = ${color.mf}
-format-foreground = ${color.fg}
-format-padding = 1
+format-spacing = 1 
+format-foreground = ${color.fg-alt}
+content-background = ${color.fg-alt}
 
-label-open = Menu
-label-close = 
-
+label-open = 襤
+label-close = 
 label-separator = |
 
-label-open-foreground = ${color.fg}
-label-close-foreground = ${color.red}
-label-separator-foreground = ${color.grey}
-
-[module/menu_i]
-type = custom/text
-
-content = 
-content-background = ${color.red}
-content-foreground = ${color.fg}
-content-padding = 1
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/style]
-type = custom/text
-
-content = Style
-content-background = ${color.mf}
-content-foreground = ${color.fg}
-content-padding = 1
-
-click-left = ~/.config/polybar/scripts/style-switch.sh &
-click-right = ~/.config/polybar/scripts/style-switch.sh &
-
-[module/style_i]
-type = custom/text
-
-content = 
-content-background = ${color.orange}
-content-foreground = ${color.fg}
-content-padding = 1
-
-click-left = ~/.config/polybar/scripts/style-switch.sh &
-click-right = ~/.config/polybar/scripts/style-switch.sh &
+label-open-foreground = ${color.fg-alt}
+label-close-foreground = ${color.fg-alt}
+label-separator-foreground = ${color.fg-alt}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;	    __________  ______
