consistent status bar icons

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -160,8 +160,7 @@ font-0 = "FiraCode Nerd Font:size=11;3"
 
 modules-left = workspaces title
 modules-center = spotify
-modules-right = alsa_i alsa separator updates separator date_i date separator testmenu
-;modules-right = style_i style separator alsa_i alsa separator battery_i battery separator network_i network separator date_i date
+modules-right = sep date2 sep audio separator updates separator checknetwork separator testmenu
 
 ; The separator will be inserted between the output of each module
 separator =
