--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -406,62 +406,6 @@ format-unmounted-padding = 1
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-[module/memory]
-type = internal/memory
-
-interval = 3
-
-format = <label>
-format-background = ${color.mf}
-format-foreground = ${color.fg}
-format-padding = 1
-
-label = "%mb_used%"
-
-[module/memory_i]
-type = internal/memory
-
-interval = 3
-
-format = 
-format-background = ${color.brown}
-format-foreground = ${color.fg}
-format-padding = 1
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/mpd]
-type = internal/mpd
-
-interval = 2
-
-format-online = <label-song> <icon-next>
-format-online-background = ${color.mf}
-format-online-padding = 1
-
-label-song =  "%artist% - %title%"
-label-song-maxlen = 20
-label-song-ellipsis = true
-
-label-offline = "MPD is offline"
-
-icon-play = 
-icon-pause = 
-icon-stop = 
-icon-prev = 
-icon-next = 
-
-[module/mpd_i]
-type = internal/mpd
-interval = 2
-
-format-online = <toggle>
-format-online-background = ${color.red}
-format-online-padding = 1
-icon-play = 
-icon-pause = 
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/wirelessnetwork]
 type = internal/network
@@ -511,50 +455,7 @@ ramp-signal-2 = 
 ramp-signal-3 = 
 ramp-signal-4 = 
 
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-[module/pulseaudio]
-type = internal/pulseaudio
-
-sink = alsa_output.pci-0000_12_00.3.analog-stereo
-use-ui-max = true
-
-interval = 5
-
-format-volume = <label-volume>
-format-volume-background = ${color.mf}
-format-volume-foreground = ${color.fg}
-format-volume-padding = 1
-
-label-muted = Muted
-format-muted-background = ${color.mf}
-format-muted-foreground = ${color.red}
-format-muted-padding = 1
-
-[module/pulseaudio_i]
-type = internal/alsa
-
-format-volume = <ramp-volume>
-format-volume-background = ${color.blue}
-format-volume-foreground = ${color.fg}
-format-volume-padding = 1
-
-format-muted-background = ${color.blue}
-format-muted-foreground = ${color.red}
-format-muted-padding = 1
-
-label-muted = ""
-label-muted-foreground = ${color.fg}
-
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
-ramp-volume-3 = 
-ramp-volume-4 = 
-ramp-headphones-0 = 
-ramp-headphones-1 = 
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/temperature]
 type = internal/temperature
@@ -797,6 +698,160 @@ ramp-signal-1 = "直 "
 ramp-signal-2 = "直 "
 ramp-signal-3 = "直 "
 ramp-signal-4 = "直 "
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/audio]
+type = internal/alsa
+
+; Soundcard to be used
+; Usually in the format hw:# where # is the card number
+; You can find the different card numbers in `/proc/asound/cards`
+;;master-soundcard = default
+;;speaker-soundcard = default
+;;headphone-soundcard = default
+
+; Name of the master, speaker and headphone mixers
+; Use the following command to list available mixer controls:
+; $ amixer scontrols | sed -nr "s/.*'([[:alnum:]]+)'.*/\1/p"
+; If master, speaker or headphone-soundcard isn't the default, 
+; use `amixer -c # scontrols` instead where # is the number 
+; of the master, speaker or headphone soundcard respectively
+;
+; Default: Master
+;;master-mixer = Master
+
+; Optionally define speaker and headphone mixers
+; Default: none
+;;speaker-mixer = Speaker
+; Default: none
+;;headphone-mixer = Headphone
+
+; NOTE: This is required if headphone_mixer is defined
+; Use the following command to list available device controls
+; $ amixer controls | sed -r "/CARD/\!d; s/.*=([0-9]+).*name='([^']+)'.*/printf '%3.0f: %s\n' '\1' '\2'/e" | sort
+; You may also need to use `amixer -c # controls` as above for the mixer names
+; Default: none
+;;headphone-id = 9
+
+; Available tags:
+;   <label-volume> (default)
+;   <ramp-volume>
+;   <bar-volume>
+format-volume = <ramp-volume> 
+
+# Label
+label-volume = %percentage%%
+
+# Mute
+te
+label-muted = " "
+label-muted-foreground = ${color.fg-alt}
+
+# Volume icons
+ramp-volume-0 = " "
+ramp-volume-1 = " "
+ramp-volume-2 = " "
+ramp-volume-3 = " "
+ramp-volume-4 = " "
+ramp-volume-foreground = ${color.fg-alt}
+label-volume-foreground = ${color.fg-alt}
+
+# Headphones icons
+ramp-headphones-0 = 
+ramp-headphones-1 = 
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/sep]
+type = custom/text
+content = |
+
+;;content-background = #000
+content-foreground = #7777777A 
+content-padding = 1
+
+[module/sep2]
+type = custom/text
+content = "| "
+
+;;content-background = #000
+content-foreground = ${color.fg-alt}
+;;content-padding = 4
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/checknetwork]
+type = custom/script
+
+exec = ~/.config/polybar/scripts/check-network
+
+; Conditional command that, if defined, needs to exit successfully
+; before the main exec command is invoked.
+; Default: ""
+;;exec-if = ""
+
+; Will the script output continous content?
+; Default: false
+tail = true
+
+; Seconds to sleep between updates
+; Default: 2 (0 if `tail = true`)
+interval = 5
+
+; Available tags:
+;   <output> - deprecated
+;   <label> (default)
+;;format = <label>
+;;format-background = #999
+format-foreground = ${color.fg-alt}
+;format-padding = 1
+
+; Available tokens:
+;   %output%
+; Default: %output%
+;;label = %output:0:15:...%
+
+; Available tokens:
+;   %counter%
+;   %pid%
+;
+; "click-(left|middle|right)" will be executed using "/usr/bin/env sh -c [command]"
+click-left = networkmanager_dmenu &
+click-middle = networkmanager_dmenu &
+click-right = networkmanager_dmenu &
+
+; Available tokens:
+;   %counter%
+;   %pid%
+;
+; "scroll-(up|down)" will be executed using "/usr/bin/env sh -c [command]"
+;;scroll-up = echo scroll up %counter%
+;;scroll-down = echo scroll down %counter%
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/date2]
+type = internal/date
+
+; Seconds to sleep between updates
+interval = 1.0
+
+; See "http://en.cppreference.com/w/cpp/io/manip/put_time" for details on how to format the date string
+; NOTE: if you want to use syntax tags here you need to use %%{...}
+
+format = "%{A1:termite -e "calcurse" & i3-msg [_NET_WM_ICON_NAME="calcurse"] focus:}<label>%{A}"
+;;$HOME/.config/polybar/scripts/calendar.sh
+
+; Optional time format
+time = %k:%M
+
+; Available tokens:
+;   %date%
+;   %time%
+; Default: %date%
+label = %time%
+label-foreground = ${color.fg-alt}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;	    __________  ______
