--- a/.config/polybar/user_modules.ini
+++ b/.config/polybar/user_modules.ini
@@ -10,7 +10,7 @@
 ;;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-[module/checknetwork]
+[module/checknetwork2]
 type = custom/script
 
 exec = ~/.config/polybar/scripts/check-network
@@ -49,16 +49,6 @@ interval = 5
 content-background = ${color.mf}
 format-foreground = ${color.fg-alt}
 ;format-padding = 1
-
-click-left = ~/.config/polybar/scripts/update-command &
-
-[module/updates_i]
-type = custom/text
-
-content = " "
-content-background = ${color.yellow}
-content-foreground = ${color.fg}
-content-padding = 1
 
 click-left = ~/.config/polybar/scripts/update-command &
 
