added battery indicator

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -111,13 +111,6 @@ label-separator-foreground = #ffb52a
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-[module/updates-pacman-aurhelper]
-type = custom/script
-exec = ~/.config/polybar/scripts/updates.sh
-interval = 600
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
 [module/spotify]
 ;https://github.com/NicholasFeldman/dotfiles/blob/master/polybar/.config/polybar/spotify.sh
 type = custom/script
@@ -131,48 +124,6 @@ content-background = ${color.fg-alt}
 content-padding = 2
 label = %{T4}%{T-} %output:0:150%
 label-maxlen = 60
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/alsa]
-type = internal/alsa
-
-format-volume = <label-volume>
-format-volume-background = ${color.mf}
-format-volume-foreground = ${color.fg}
-format-volume-padding = 1
-
-label-volume = %percentage%%
-
-format-muted-background = ${color.mf}
-format-muted-foreground = ${color.red}
-format-muted-padding = 1
-
-label-muted = "Muted"
-label-muted-foreground = ${color.fg}
-
-[module/alsa_i]
-type = internal/alsa
-
-format-volume = <ramp-volume>
-format-volume-background = ${color.blue}
-format-volume-foreground = ${color.fg}
-format-volume-padding = 1
-
-format-muted-background = ${color.blue}
-format-muted-foreground = ${color.red}
-format-muted-padding = 1
-
-label-muted = 
-label-muted-foreground = ${color.fg}
-
-ramp-volume-0 = " "
-ramp-volume-1 = " "
-ramp-volume-2 = " "
-ramp-volume-3 = " "
-ramp-volume-4 = " "
-ramp-headphones-0 = 
-ramp-headphones-1 = 
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -214,73 +165,57 @@ ramp-9 = 
 [module/battery]
 type = internal/battery
 
+; This is useful in case the battery never reports 100% charge
 full-at = 99
 
-battery = BAT1
-adapter = ACAD
+; Use the following command to list batteries and adapters:
+; $ ls -1 /sys/class/power_supply/
+battery = BAT0
+adapter = AC
 
+; If an inotify event haven't been reported in this many
+; seconds, manually poll for new values.
+;
+; Needed as a fallback for systems that don't report events
+; on sysfs/procfs.
+;
+; Disable polling by setting the interval to 0.
+;
+; Default: 5
 poll-interval = 2
-time-format = %H:%M
 
-format-charging = <label-charging>
-format-charging-background = ${color.mf}
-format-charging-foreground = ${color.fg}
-format-charging-padding = 1
+; Available tags:
+;   <label-charging> (default)
+;   <bar-capacity>
+;   <ramp-capacity>
+;   <animation-charging>
+format-charging = <animation-charging> 
 
-format-discharging = <label-discharging>
-format-discharging-background = ${color.mf}
-format-discharging-foreground = ${color.fg}
-format-discharging-padding = 1
-
-label-charging = %percentage%%
-label-discharging = %percentage%%
-
-label-full = Fully Charged
-label-full-foreground = ${color.fg}
-label-full-background = ${color.mf}
-label-full-padding = 1
-
-[module/battery_i]
-type = internal/battery
-
-full-at = 99
-battery = BAT1
-adapter = ACAD
-
-poll-interval = 2
-time-format = %H:%M
-
-format-charging = <animation-charging>
-format-charging-background = ${color.green}
-format-charging-foreground = ${color.fg}
-format-charging-padding = 1
-
+; Available tags:
+;   <label-discharging> (default)
+;   <bar-capacity>
+;   <ramp-capacity>
+;   <animation-discharging>
 format-discharging = <ramp-capacity>
-format-discharging-background = ${color.pink}
-format-discharging-foreground = ${color.fg}
-format-discharging-padding = 1
 
-label-charging = %percentage%%
-label-discharging = %percentage%%
+; Only applies if <ramp-capacity> is used
+ramp-capacity-0 = " "
+ramp-capacity-1 = " "
+ramp-capacity-2 = " "
+ramp-capacity-3 = " "
+ramp-capacity-4 = " "
+ramp-capacity-foreground = ${color.fg-alt}
 
-label-full = 
-label-full-background = ${color.green}
-label-full-foreground = ${color.fg}
-label-full-padding = 1
+; Only applies if <animation-charging> is used
+animation-charging-0 = " "
+animation-charging-1 = " "
+animation-charging-2 = " "
+animation-charging-3 = " "
+animation-charging-4 = " "
+animation-charging-5 = " "
+animation-charging-foreground = ${color.fg-alt}
 
-ramp-capacity-0 = " "
-ramp-capacity-1 = " "
-ramp-capacity-2 = " "
-ramp-capacity-3 = " "
-ramp-capacity-4 = " "
-
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-animation-charging-5 = 
-
+; Framerate in milliseconds
 animation-charging-framerate = 750
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
@@ -306,38 +241,6 @@ format = 
 format-background = ${color.teal}
 format-foreground = ${color.fg}
 format-padding = 1
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/date]
-type = internal/date
-
-interval = 1.0
-
-time = %H:%M
-time-alt = %Y-%m-%d%
-
-format = <label>
-format-background = ${color.mf}
-format-foreground = ${color.fg}
-format-padding = 1
-
-label = %time%
-
-[module/date_i]
-type = internal/date
-
-interval = 1.0
-
-time = " "
-time-alt = " "
-
-format = <label>
-format-background = ${color.amber}
-format-foreground = ${color.fg}
-format-padding = 1
-
-label = %time%
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -405,57 +308,6 @@ format-unmounted-padding = 1
 ;;label = %notifications%
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-
-[module/wirelessnetwork]
-type = internal/network
-
-interface = wlp3s0
-interval = 1.0
-
-accumulate-stats = true
-unknown-as-up = true
-
-format-connected = <label-connected>
-format-connected-background = ${color.mf}
-format-connected-foreground = ${color.fg}
-format-connected-padding = 1
-
-format-disconnected = <label-disconnected>
-format-disconnected-background = ${color.mf}
-format-disconnected-foreground = ${color.fg}
-format-disconnected-padding = 1
-
-label-connected = "%essid%"
-label-disconnected = "Disconnected"
-
-[module/wirelessnetwork_i]
-type = internal/network
-interface = wlp3s0
-
-interval = 1.0
-accumulate-stats = true
-unknown-as-up = true
-
-format-connected = <ramp-signal>
-format-connected-background = ${color.purple}
-format-connected-foreground = ${color.fg}
-format-connected-padding = 1
-
-format-disconnected = <label-disconnected>
-format-disconnected-background = ${color.purple}
-format-disconnected-foreground = ${color.fg}
-format-disconnected-padding = 1
-
-label-disconnected = 
-
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
-
-
 
 [module/temperature]
 type = internal/temperature
@@ -542,162 +394,6 @@ format-foreground = ${color.fg-alt}
 
 label =  %title%
 label-maxlen = 30
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-; Normal Module
-[module/network]
-type = internal/network
-interface = enp34s0
-
-; Seconds to sleep between updates
-; Default: 1
-interval = 1.0
-
-; Test connectivity every Nth update
-; A value of 0 disables the feature
-; NOTE: Experimental (needs more testing)
-; Default: 0
-;ping-interval = 3
-
-; @deprecated: Define min width using token specifiers (%downspeed:min% and %upspeed:min%)
-; Minimum output width of upload/download rate
-; Default: 3
-;;udspeed-minwidth = 5
-
-; Accumulate values from all interfaces
-; when querying for up/downspeed rate
-; Default: false
-accumulate-stats = true
-
-; Consider an `UNKNOWN` interface state as up.
-; Some devices have an unknown state, even when they're running
-; Default: false
-unknown-as-up = true
-
-; Available tags:
-;   <label-connected> (default)
-;   <ramp-signal>
-;format-connected = <ramp-signal> <label-connected>
-
-format-connected = <label-connected>
-format-connected-background = ${color.mf}
-format-connected-foreground = ${color.fg}
-format-connected-padding = 1
-
-; Available tags:
-;   <label-connected> (default)
-;   <label-packetloss>
-;   <animation-packetloss>
-;;format-packetloss = <animation-packetloss> <label-connected>
-
-; Available tokens:
-;   %ifname%    [wireless+wired]
-;   %local_ip%  [wireless+wired]
-;   %local_ip6% [wireless+wired]
-;   %essid%     [wireless]
-;   %signal%    [wireless]
-;   %upspeed%   [wireless+wired]
-;   %downspeed% [wireless+wired]
-;   %linkspeed% [wired]
-; Default: %ifname% %local_ip%
-label-connected = "%local_ip%  %downspeed%"
-;;label-connected-foreground = #eefafafa
-
-; Available tokens:
-;   %ifname%    [wireless+wired]
-; Default: (none)
-label-disconnected = Disconnected
-;;label-disconnected-foreground = #66ffffff
-
-; Available tokens:
-;   %ifname%    [wireless+wired]
-;   %local_ip%  [wireless+wired]
-;   %local_ip6% [wireless+wired]
-;   %essid%     [wireless]
-;   %signal%    [wireless]
-;   %upspeed%   [wireless+wired]
-;   %downspeed% [wireless+wired]
-;   %linkspeed% [wired]
-; Default: (none)
-;label-packetloss = %essid%
-;label-packetloss-foreground = #eefafafa
-
-[module/network_i]
-type = internal/network
-interface = enp34s0
-
-interval = 1.0
-accumulate-stats = true
-unknown-as-up = true
-
-format-connected = <ramp-signal> 
-format-connected-background = ${color.purple}
-format-connected-foreground = ${color.fg}
-format-connected-padding = 1
-
-format-disconnected = <label-disconnected>
-format-disconnected-background = ${color.purple}
-format-disconnected-foreground = ${color.fg}
-format-disconnected-padding = 1
-
-label-disconnected = ""
-
-ramp-signal-0 = ""
-ramp-signal-1 = ""
-ramp-signal-2 = ""
-ramp-signal-3 = ""
-ramp-signal-4 = ""
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/wifi]
-type = internal/network
-
-interface = wlp1s0
-interval = 1.0
-
-accumulate-stats = true
-unknown-as-up = true
-
-format-connected = <label-connected>
-format-connected-background = ${color.mf}
-format-connected-foreground = ${color.fg}
-format-connected-padding = 1
-
-format-disconnected = <label-disconnected>
-format-disconnected-background = ${color.mf}
-format-disconnected-foreground = ${color.fg}
-format-disconnected-padding = 1
-
-label-connected = "%{A1:$HOME/.config/polybar/scripts/nmcli-rofi:}%essid%%{A}"
-label-disconnected = "%{A1:$HOME/.config/polybar/scripts/nmcli-rofi:}Disconnected%{A}"
-
-[module/wifi_i]
-type = internal/network
-interface = wlp1s0
-
-interval = 1.0
-accumulate-stats = true
-unknown-as-up = true
-
-format-connected = <ramp-signal>
-format-connected-background = ${color.purple}
-format-connected-foreground = ${color.fg}
-format-connected-padding = 1
-
-format-disconnected = <label-disconnected>
-format-disconnected-background = ${color.purple}
-format-disconnected-foreground = ${color.fg}
-format-disconnected-padding = 1
-
-label-disconnected = "睊 "
-
-ramp-signal-0 = "直 "
-ramp-signal-1 = "直 "
-ramp-signal-2 = "直 "
-ramp-signal-3 = "直 "
-ramp-signal-4 = "直 "
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
