--- a/.config/polybar/user_modules.ini
+++ b/.config/polybar/user_modules.ini
@@ -93,7 +93,7 @@ label-separator = |
 
 label-open-foreground = ${color.fg-alt}
 label-close-foreground = ${color.fg-alt}
-label-separator-foreground = ${color.fg-alt}
+label-separator-foreground = #7777777A
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;	    __________  ______
