--- a/.config/polybar/user_modules.ini
+++ b/.config/polybar/user_modules.ini
@@ -74,14 +74,10 @@ click-right = ~/.config/polybar/scripts/powermenu-alt
 type = custom/menu
 expand-right = true
 
-menu-0-0 = reboot
+menu-0-0 = %{F#C4C7C5}reboot%{F-}
 menu-0-0-exec = systemctl reboot
-menu-0-1 = shutdown
+menu-0-1 = %{F#C4C7C5}shutdown%{F-}
 menu-0-1-exec = systemctl poweroff
-menu-1-0 = reboot
-menu-1-0-exec = systemctl reboot
-menu-2-0 = shutdown
-menu-2-0-exec = systemctl poweroff
 
 format-spacing = 1 
 format-foreground = ${color.fg-alt}
