--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -220,69 +220,6 @@ animation-charging-framerate = 750
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-[module/cpu]
-type = internal/cpu
-
-interval = 0.5
-
-format = <label>
-format-background = ${color.mf}
-format-foreground = ${color.fg}
-format-padding = 1
-
-label = "%percentage%%"
-
-[module/cpu_i]
-type = internal/cpu
-
-interval = 0.5
-
-format = 
-format-background = ${color.teal}
-format-foreground = ${color.fg}
-format-padding = 1
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/filesystem]
-type = internal/fs
-
-mount-0 = /
-interval = 10
-fixed-values = true
-
-format-mounted = <label-mounted>
-format-mounted-background = ${color.mf}
-format-mounted-foreground = ${color.fg}
-format-mounted-padding = 1
-
-format-unmounted = <label-unmounted>
-format-unmounted-background = ${color.mf}
-format-unmounted-foreground = ${color.fg}
-format-unmounted-padding = 1
-
-label-mounted = "%free%"
-label-unmounted = %mountpoint%: not mounted
-
-[module/filesystem_i]
-type = internal/fs
-
-mount-0 = /
-interval = 10
-fixed-values = true
-
-format-mounted = 
-format-mounted-background = ${color.green}
-format-mounted-foreground = ${color.fg}
-format-mounted-padding = 1
-
-format-unmounted = 
-format-unmounted-background = ${color.red}
-format-unmounted-foreground = ${color.fg}
-format-unmounted-padding = 1
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
 ;;[module/github]
 ;;type = internal/github
 
@@ -306,83 +243,6 @@ format-unmounted-padding = 1
 ;   %notifications% (default)
 ; Default: Notifications: %notifications%
 ;;label = %notifications%
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/temperature]
-type = internal/temperature
-
-interval = 0.5
-thermal-zone = 0
-
-warn-temperature = 60
-units = true
-
-format = <label>
-format-background = ${color.mf}
-format-foreground = ${color.fg}
-format-padding = 1
-
-format-warn = <label-warn>
-format-warn-background = ${color.mf}
-format-warn-foreground = ${color.red}
-format-warn-padding = 1
-
-label = %temperature-c%
-label-warn = "%temperature-c%"
-
-[module/temperature_i]
-type = internal/temperature
-
-interval = 0.5
-thermal-zone = 0
-
-warn-temperature = 60
-units = true
-
-format = <ramp>
-format-background = ${color.cyan}
-format-foreground = ${color.fg}
-format-padding = 1
-
-format-warn = <ramp>
-format-warn-background = ${color.cyan}
-format-warn-foreground = ${color.fg}
-format-warn-padding = 1
-
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-3 = 
-ramp-4 = 
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/keyboard]
-type = internal/xkeyboard
-
-blacklist-0 = num lock
-blacklist-1 = scroll lock
-
-format = <label-layout> <label-indicator>
-format-background = ${color.mf}
-format-foreground = ${color.fg}
-format-padding = 1
-
-label-layout = %layout%
-label-indicator = %name%
-label-indicator-foreground = ${color.fg}
-
-[module/keyboard_i]
-type = internal/xkeyboard
-
-blacklist-0 = num lock
-blacklist-1 = scroll lock
-
-format = 
-format-background = ${color.blue-gray}
-format-foreground = ${color.fg}
-format-padding = 1
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -536,7 +396,7 @@ interval = 1.0
 ; See "http://en.cppreference.com/w/cpp/io/manip/put_time" for details on how to format the date string
 ; NOTE: if you want to use syntax tags here you need to use %%{...}
 
-format = "%{A1:termite -e "calcurse" & i3-msg [_NET_WM_ICON_NAME="calcurse"] focus:}<label>%{A}"
+format = "%{A1:i3-msg "exec --no-startup-id termite --name cal -e "calcurse"":}<label>%{A}"
 ;;$HOME/.config/polybar/scripts/calendar.sh
 
 ; Optional time format
