--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -119,8 +119,6 @@ interval = 1
 
 format-foreground = ${color.fg-alt}
 content-background = ${color.fg-alt}
-;format-foreground = ${color.fg}
-;content-background = ${color.fg}
 content-padding = 2
 label = %{T4}%{T-} %output:0:150%
 label-maxlen = 60
@@ -329,11 +327,11 @@ content-padding = 1
 
 [module/sep2]
 type = custom/text
-content = "| "
+content = " |"
 
 ;;content-background = #000
-content-foreground = ${color.fg-alt}
-;;content-padding = 4
+content-foreground = #7777777A 
+content-padding = 0
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
