--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -160,7 +160,7 @@ font-0 = "FiraCode Nerd Font:size=11;3"
 
 modules-left = workspaces title
 modules-center = spotify
-:modules-right = sep date2 sep battery separator audio separator checknetwork separator testmenu
+;modules-right = sep date2 sep battery separator audio separator checknetwork separator testmenu
 modules-right = sep date2 sep audio separator updates separator checknetwork separator testmenu
 
 
