removed obsolete files

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -27,7 +27,7 @@ wrapping-scroll = true
 ; containing 'code' in the label
 ; Default: false
 ; fuzzy-match = true
-Additional formatting
+; Additional formatting
 ; ws-icon-[0-9]+ = <label>;<icon>
 ; NOTE: The <label> needs to match the name of the i3 workspace
 ; Neither <label> nor <icon> can contain a semicolon (;)
@@ -112,7 +112,6 @@ label-separator-foreground = #ffb52a
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/spotify]
-;https://github.com/NicholasFeldman/dotfiles/blob/master/polybar/.config/polybar/spotify.sh
 type = custom/script
 exec = ~/.config/polybar/scripts/spotify.sh
 interval = 1
@@ -325,14 +324,6 @@ content = |
 content-foreground = #7777777A 
 content-padding = 1
 
-[module/sep2]
-type = custom/text
-content = " |"
-
-;;content-background = #000
-content-foreground = #7777777A 
-content-padding = 0
-
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/checknetwork]
@@ -406,6 +397,53 @@ time = %k:%M
 ; Default: %date%
 label = %time%
 label-foreground = ${color.fg-alt}
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/updates]
+type = custom/script
+exec = ~/.config/polybar/scripts/updates.sh
+tail = true
+interval = 5
+
+content-background = ${color.mf}
+format-foreground = ${color.fg-alt}
+;format-padding = 1
+
+click-left = ~/.config/polybar/scripts/update-command &
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/separator]
+type = custom/text
+
+content = |
+content-background = ${color.bg}
+content-foreground = ${color.bg}
+content-padding = 0.5
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/menu]
+type = custom/menu
+expand-right = true
+
+menu-0-0 = %{F#C4C7C5}reboot%{F-}
+menu-0-0-exec = systemctl reboot
+menu-0-1 = %{F#C4C7C5}shutdown%{F-}
+menu-0-1-exec = systemctl poweroff
+
+format-spacing = 1 
+format-foreground = ${color.fg-alt}
+content-background = ${color.fg-alt}
+
+label-open = 襤
+label-close = 
+label-separator = |
+
+label-open-foreground = ${color.fg-alt}
+label-close-foreground = ${color.fg-alt}
+label-separator-foreground = #7777777A
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;	    __________  ______
