--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -29,8 +29,6 @@ margin-top = 0
 
 include-file = ~/.config/polybar/colors.ini
 include-file = ~/.config/polybar/modules.ini
-include-file = ~/.config/polybar/user_modules.ini
-include-file = ~/.config/polybar/bars.ini
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -161,7 +159,7 @@ font-0 = "FiraCode Nerd Font:size=11;3"
 modules-left = workspaces title
 modules-center = spotify
 ;modules-right = sep date2 sep battery separator audio separator checknetwork separator testmenu
-modules-right = sep date2 sep audio separator updates separator checknetwork separator testmenu
+modules-right = sep date2 sep audio separator updates separator checknetwork separator menu
 
 
 ; The separator will be inserted between the output of each module
